--- a/index.html
+++ b/index.html
@@ -528,9 +528,9 @@
             <span class="bar"></span>
         </button>
         <nav class="nav-actions">
-            <a href="#home">HOME</a>
-            <a href="#services">SERVICES</a>
-            <a href="#contact">CONTACT</a>
+            <a href="home.html">HOME</a>
+            <a href="services.html">SERVICES</a>
+            <a href="contact.html">CONTACT</a>
         </nav>
     </div>
 </header>
@@ -546,7 +546,7 @@
         <p class="reveal" style="transition-delay: 0.2s;">Scale Beyond Limits</p>
         <div class="reveal" style="transition-delay: 0.4s;">
             <a href="services.html" class="cta-btn primary">VIEW SERVICES</a>
-            <a href="#contact" class="cta-btn secondary">GET IN TOUCH</a>
+            <a href="contact.html " class="cta-btn secondary">GET IN TOUCH</a>
         </div>
         <div class="details-section reveal" style="transition-delay: 0.6s;">
             <h2>The Dream to be a King</h2>
@@ -569,7 +569,7 @@
                         <li>Account Setup & Branding</li>
                     </ul>
                 </div>
-                <a href="#contact" class="cta-btn primary">START BASIC</a>
+                <a href="contact.html" class="cta-btn primary">START BASIC</a>
             </div>
             <div class="glass-card package-card reveal" style="transition-delay: 0.2s;">
                 <div>
@@ -582,7 +582,7 @@
                         <li>Monthly Growth Report</li>
                     </ul>
                 </div>
-                <a href="#contact" class="cta-btn primary">GO STANDARD</a>
+                <a href="contact.html " class="cta-btn primary">GO STANDARD</a>
             </div>
             <div class="glass-card package-card reveal" style="transition-delay: 0.3s;">
                 <div>
@@ -595,7 +595,7 @@
                         <li>SEO + Strategy Support</li>
                     </ul>
                 </div>
-                <a href="#contact" class="cta-btn primary">UNLOCK PREMIUM</a>
+                <a href="contact.html" class="cta-btn primary">UNLOCK PREMIUM</a>
             </div>
             <div class="glass-card package-card reveal" style="transition-delay: 0.4s;">
                 <div>
@@ -608,7 +608,7 @@
                         <li>Advanced Analytics</li>
                     </ul>
                 </div>
-                <a href="#contact" class="cta-btn secondary">GET A QUOTE</a>
+                <a href="contact.html" class="cta-btn secondary">GET A QUOTE</a>
             </div>
         </div>
     </div>
