--- a/index.html
+++ b/index.html
@@ -1,26 +1,56 @@
 <!doctype html>
-
 <html lang="en">
 <head>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CYPMYFZVV2"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'G-CYPMYFZVV2');
-    </script>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Rexora Reve — Scale Beyond Limits</title>
-    <meta name="description" content="Rexora Reve — A premium digital agency delivering branding, design, and development solutions. Where dreams become empires.">
-    <meta name="keywords" content="Rexora Reve, Digital Agency, Luxury Branding, Web Design, Marketing">
-    <link rel="canonical" href="https://www.rexora-reve.com/">
-    <meta name="robots" content="index, follow">
-    <meta property="og:title" content="Rexora Reve — Scale Beyond Limits">
-    <meta property="og:description" content="Premium digital agency crafting luxury brand experiences.">
-    <meta name="theme-color" content="#000000">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+  <!-- Google Tag Manager -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-CYPMYFZVV2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-CYPMYFZVV2');
+  </script>
 
+  <!-- Structured Data (Schema Markup for Rexora Reve & Ritik Raj) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Rexora Reve",
+    "url": "https://www.rexora-reve.com/",
+    "logo": "https://www.rexora-reve.com/assets/logo.png",
+    "founder": {
+      "@type": "Person",
+      "name": "Ritik Raj",
+      "jobTitle": "Founder & Creative Director",
+      "sameAs": [
+        "https://www.instagram.com/rexoraofiicial_35/",
+        "mailto:rexora35@gmail.com"
+      ]
+    },
+    "contactPoint": {
+      "@type": "ContactPoint",
+      "email": "rexora35@gmail.com",
+      "contactType": "customer support",
+      "availableLanguage": ["English", "Hindi"]
+    },
+    "description": "Rexora Reve — a digital marketing and creative studio led by Ritik Raj, building modern brand identities and growth-focused designs.",
+    "foundingDate": "2025",
+    "brand": "Rexora Reve"
+  }
+  </script>
+
+  <meta name="author" content="Ritik Raj, Rexora Reve">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Rexora Reve — Scale Beyond Limits</title>
+  <meta name="description" content="Rexora Reve — A premium digital agency delivering branding, design, and development solutions. Where dreams become empires.">
+  <meta name="keywords" content="Rexora Reve, Digital Agency, Luxury Branding, Web Design, Marketing">
+  <link rel="canonical" href="https://www.rexora-reve.com/">
+  <meta name="robots" content="index, follow">
+  <meta property="og:title" content="Rexora Reve — Scale Beyond Limits">
+  <meta property="og:description" content="Premium digital agency crafting luxury brand experiences.">
+  <meta name="theme-color" content="#000000">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 
 <style>
     :root {
