--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
             <span class="bar"></span>
         </button>
         <nav class="nav-actions">
-            <a href="home.html">HOME</a>
+            <a href="/home.html">HOME</a>
             <a href="services.html">SERVICES</a>
             <a href="contact.html">CONTACT</a>
         </nav>
