--- a/index.html
+++ b/index.html
@@ -579,8 +579,13 @@
             <a href="contact.html " class="cta-btn secondary">GET IN TOUCH</a>
         </div>
         <div class="details-section reveal" style="transition-delay: 0.6s;">
-            <h2>The Dream to be a King</h2>
-            <p>At Rexora Reve, we focus on what matters most — real growth and measurable impact. With a deep understanding of audiences, we craft creative yet strategic digital solutions that connect with people and drive results. Our promise is simple: premium quality, transparent process, and consistent excellence — so your brand doesn't just exist online, it dominates.</p>
+            <h2>About Rexora Reve</h2>
+            <p>
+              Rexora Reve is a next–gen digital marketing and brand design studio founded by <strong>Ritik Raj</strong>.
+              Built on creativity, strategy, and precision — we help businesses transform their presence into brands that stand out.
+              From digital campaigns to sleek visuals, every project under Rexora Reve reflects a single mission: 
+              <em>Scale Beyond Limits.</em>
+            </p>
         </div>
     </div>
 </section>
