--- a/index.html
+++ b/index.html
@@ -558,8 +558,9 @@
             <span class="bar"></span>
         </button>
         <nav class="nav-actions">
-            <a href="home.html">HOME</a>
-            <a href="services.html">SERVICES</a>
+            <a href="index.html">HOME</a>
+            <a href="#services">SERVICES</a>
+            <a href="index.html#services">SERVIC1</a>
             <a href="contact.html">CONTACT</a>
         </nav>
     </div>
@@ -661,7 +662,7 @@
 </section>
 
 <footer class="footer">
-    © 2025 Rexora Reve. All rights reserved.
+  © 2025 Rexora Reve. Built & Managed by <strong>Ritik Raj</strong> — Founder of Rexora Reve.
 </footer>
 
 <script>
