--- a/index.html
+++ b/index.html
@@ -559,8 +559,8 @@
         </button>
         <nav class="nav-actions">
             <a href="index.html">HOME</a>
-            <a href="#services">SERVICES</a>
-            <a href="index.html#services">SERVIC1</a>
+            <a href="services.html">SERVICES</a>
+           
             <a href="contact.html">CONTACT</a>
         </nav>
     </div>
