--- a/index.html
+++ b/index.html
@@ -890,7 +890,7 @@
 
     <footer class="footer">
         © 2025 Rexora Reve. Built & Managed by <strong>Ritik Raj</strong> — Founder of Rexora Reve.<br>
-        <a href="https://www.instagram.com/rexora_reve" target="_blank" style="margin-top: 10px;</a>
+        <a href="https://www.instagram.com/rexora_reve" target="_blank" style="margin-top: 10px; display: inline-block;">@rexora_reve</a>
     </footer>
 
     <script>
